--- a/live-request.html
+++ b/live-request.html
@@ -315,6 +315,6 @@
         DisplayNone.classList.toggle("display-none");
       }
     </script>
-    <script src="./dashboard.js"></script>
+    <script src="./utils/js/dashboard.js"></script>
   </body>
 </html>
