--- a/service-profile.html
+++ b/service-profile.html
@@ -525,6 +525,6 @@
             inst.setEvents(events);
         }, 'jsonp');
     </script>
-    <script src="./dashboard.js"></script>
+    <script src="./utils/js/dashboard.js"></script>
 </body>
 </html>
