--- a/create-billing.html
+++ b/create-billing.html
@@ -378,6 +378,6 @@
         },
       };
     </script>
-    <script src="./dashboard.js"></script>
+    <script src="./utils/js/dashboard.js"></script>
   </body>
 </html>
