--- a/create-post.html
+++ b/create-post.html
@@ -465,7 +465,7 @@
             inst.setEvents(events);
         }, 'jsonp');
     </script>
-    <script src="./dashboard.js"></script>
+    <script src="./utils/js/dashboard.js"></script>
 </body>
 
 </html>
