--- a/donate.html
+++ b/donate.html
@@ -262,6 +262,6 @@
         },
       };
     </script>
-    <script src="./dashboard.js"></script>
+    <script src="./utils/js/dashboard.js"></script>
   </body>
 </html>
