--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
           </figure>
 
           <button class="text-[orange]">
-            <i class="fas fa-bars text-4xl" id="nav-open-btn"></i>
-            <!-- <i class="fa-solid fa-bars"></i> -->
+            <i class="fas fa-bars text-xl" id="nav-open-btn"></i>
           </button>
         </div>
 
@@ -51,7 +50,7 @@
           id="nav-small-screen"
         >
           <div
-            class="flex justify-between items-center mt-3 px-4 md:mt-0 md:px-0"
+            class="flex justify-between items-center mt-4 px-4 md:mt-0 md:px-0"
           >
             <figure class="md:h-7 h-6">
               <img
@@ -62,7 +61,7 @@
               />
             </figure>
             <button
-              class="text-3xl text-[#FF5F1F] font-normal md:hidden"
+              class="text-xl text-[#FF5F1F] font-normal md:hidden"
               id="nav-close-btn"
             >
               <i class="fas fa-times"></i>
