--- a/profile.html
+++ b/profile.html
@@ -258,7 +258,7 @@
       },
     };
   </script>
-  <script src="./dashboard.js"></script>
+  <script src="./utils/js/dashboard.js"></script>
 </body>
 
 </html>
