--- a/show-all.html
+++ b/show-all.html
@@ -284,7 +284,7 @@
       DisplayNone.classList.toggle("display-none");
     }
   </script>
-  <script src="./dashboard.js"></script>
+  <script src="./utils/js/dashboard.js"></script>
 </body>
 
 </html>
