update dashboard font size for first 4 pages

--- a/index.html
+++ b/index.html
@@ -617,28 +617,34 @@
           >
             <div class="w-[100%]">
               <div class="build-info-img relative">
-                <div class="flex absolute bottom-[20%] sm:bottom-[25%]">
-                  <button
-                    data-aos="zoom-in"
-                    class="bg-[#3465E1] text-xs sm:text-base font-bold text-white rounded-[5rem] tracking-wider sm:w-[123px] w-[5rem] py-2 cursor-pointer mr-1 sm:mr-3 border-[0.375rem] border-[translate] hover:scale-105 transition ease-in-out"
-                    id="present-btn"
-                  >
-                    Present
-                  </button>
-                  <button
-                    data-aos="zoom-in"
-                    class="bg-[#E13468] text-xs sm:text-base font-bold text-white rounded-[5rem] tracking-wider sm:w-[123px] w-[5rem] py-2 flex justify-center items-center cursor-pointer border-[0.375rem] border-[#F2C6D0] hover:scale-105 transition ease-in-out"
-                    id="call-btn"
-                  >
-                    <img
-                      style="height: 13px; width: 12px"
-                      src="./utils/images/vector_14.png"
-                      alt="Vector Curve"
-                      loading="lazy"
-                      class="mr-2 sm:mr-4"
-                    />
-                    Cal
-                  </button>
+                <div
+                  class="flex items-center absolute bottom-[20%] sm:bottom-[25%]"
+                >
+                  <div>
+                    <button
+                      data-aos="zoom-in"
+                      class="bg-[#3465E1] text-xs sm:text-base font-bold text-white rounded-[5rem] tracking-wider sm:w-[123px] w-[5rem] py-2 cursor-pointer mr-1 sm:mr-3 hover:border-[0.375rem] hover:border-[translate] hover:scale-105 transition ease-in-out"
+                      id="present-btn"
+                    >
+                      Present
+                    </button>
+                  </div>
+                  <div>
+                    <button
+                      data-aos="zoom-in"
+                      class="bg-[#E13468] text-xs sm:text-base font-bold text-white rounded-[5rem] tracking-wider sm:w-[123px] w-[5rem] py-2 flex justify-center items-center cursor-pointer hover:border-[0.375rem] hover:border-[#F2C6D0] hover:scale-105 transition ease-in-out"
+                      id="call-btn"
+                    >
+                      <img
+                        style="height: 13px; width: 12px"
+                        src="./utils/images/vector_14.png"
+                        alt="Vector Curve"
+                        loading="lazy"
+                        class="mr-2 sm:mr-4"
+                      />
+                      Cal
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
