--- a/account.html
+++ b/account.html
@@ -20,18 +20,18 @@
     <main class="min-h-screen bg-[#F7F8FB]">
       <div class="flex">
         <aside
-          class="h-screen absolute top-0 -left-full z-50 w-full bg-[#00000070] md:relative md:top-0 md:left-0 md:w-auto transition-all ease-in"
+          class="h-screen absolute top-0 -left-full z-50 w-full bg-[#00000080] md:relative md:top-0 md:left-0 md:w-[16rem] lg:w-80 transition-all ease-in"
           id="sidebar"
         >
           <button
-            class="text-xl absolute right-4 top-4 text-white font-normal cursor-pointer md:hidden"
+            class="text-clr_blue absolute right-4 top-4"
             id="dashb-nav-closeBtn"
           >
-            <i class="fas fa-times"></i>
+            <i class="fas fa-times text-xl text-white"></i>
           </button>
 
           <nav
-            class="w-[70%] bg-white h-screen flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-64 pr-5 md:pr-1 md:rounded-none"
+            class="w-[70%] bg-white h-screen flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
               <a href="dashboard.html">
@@ -40,7 +40,7 @@
                     src="./utils/images/pair-time.svg"
                     alt="Company Logo"
                     loading="lazy"
-                    class="md:w-[80%] w-36 cursor-pointer"
+                    class="sm:w-[80%] w-28 cursor-pointer"
                   />
                 </figure>
               </a>
@@ -51,7 +51,7 @@
                     src="./utils/images/icon-17.svg"
                     alt="Icon"
                     loading="lazy"
-                    class="md:w-20 w-10"
+                    class="md:w-20 w-6"
                   />
                 </a>
                 <a href="profile.html" class="hover:shadow-btn rounded-full">
@@ -59,43 +59,44 @@
                     src="./utils/images/user-photo.png"
                     alt="User Photo"
                     loaindg="lazy"
-                    class="h-12 md:w-12 w-10"
+                    class="h-8 md:w-12 w-8"
                   />
                 </a>
-                <!-- <button class="text-clr_bluehidden" id="dashb-nav-openBtn">
-                  <i class="fas fa-bars text-4xl" id="nav-open-btn"></i>
-                </button> -->
               </div>
             </div>
+
             <div
               class="border-bottom w-full border-b-[0.5px] opacity-60 mb-6 hidden md:block"
             ></div>
+
             <ul class="flex-1 flex flex-col">
               <li>
                 <a
                   href="create-post.html"
-                  class="flex items-center pl-6 py-5 hover:text-clr_blue"
+                  class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
                     src="./utils/images/icon-10.svg"
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-sm font-semibold">Create A Post</span>
+                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                    >Create A Post</span
+                  >
                 </a>
               </li>
 
               <li>
                 <a
                   href=""
-                  class="flex items-center pl-6 py-5 hover:text-clr_blue"
+                  class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
                     src="./utils/images/icon-11.svg"
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-semibold"
                     >Fill Out Your Service Profile</span
                   >
                 </a>
@@ -104,28 +105,30 @@
               <li>
                 <a
                   href=""
-                  class="flex items-center pl-6 py-5 hover:text-clr_blue"
+                  class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
                     src="./utils/images/icon-12.svg"
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-sm font-semibold">Live Request</span>
+                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                    >Live Request</span
+                  >
                 </a>
               </li>
 
               <li>
                 <a
                   href="show-all.html"
-                  class="flex items-center pl-6 py-5 hover:text-clr_blue"
+                  class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
                     src="./utils/images/icon-13.svg"
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-semibold"
                     >Visible Profiles</span
                   >
                 </a>
@@ -141,7 +144,8 @@
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 poppins text-sm font-medium text-[#FF5223]"
+                  <span
+                    class="ml-2 text-xs lg:text-sm font-semibold text-[#FF5223]"
                     >Logout</span
                   >
                 </a>
@@ -152,79 +156,98 @@
 
         <section class="w-full relative overflow-hidden">
           <div class="w-[90%] mx-auto">
-            <div class="top h-[12vh] flex justify-between items-center">
+            <div
+              class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
+            >
+              <div class="flex justify-between">
+                <a href="dashboard.html">
+                  <figure class="w-full md:px-5 py-6">
+                    <img
+                      src="./utils/images/pair-time.svg"
+                      alt="Company Logo"
+                      loading="lazy"
+                      class="sm:hidden w-24 cursor-pointer"
+                    />
+                  </figure>
+                </a>
+
+                <div class="user flex gap-5 items-center">
+                  <a
+                    href="account.html"
+                    class="hover:shadow-btn hidden md:block"
+                  >
+                    <img
+                      src="./utils/images/icon-17.svg"
+                      alt="Icon"
+                      loading="lazy"
+                    />
+                  </a>
+                  <a
+                    href="profile.html"
+                    class="hover:shadow-btn rounded-full hidden md:block"
+                  >
+                    <img
+                      src="./utils/images/user-photo.png"
+                      alt="User Photo"
+                      loaindg="lazy"
+                      class="lg:h-10 lg:w-10 h-8 w-8"
+                    />
+                  </a>
+                  <button class="text-clr_blue md:hidden">
+                    <i class="fas fa-bars text-xl" id="dashb-nav-openBtn"></i>
+                  </button>
+                </div>
+              </div>
+
               <div class="search-bar relative">
                 <input
                   type="text"
                   placeholder="Search Anything"
-                  class="w-72 pl-8 pr-2 py-3 text-xs rounded-xl border-none outline-none placeholder-primary"
+                  class="sm:w-56 lg:w-72 w-full pl-8 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
                 />
                 <img
                   src="./utils/images/search.svg"
                   alt="Search Icon"
                   loading="lazy"
-                  class="absolute top-3 left-3"
+                  class="absolute top-[30%] left-[3%] md:left-[5%]"
                 />
-              </div>
-              <div class="user flex gap-5 items-center">
-                <a href="account.html" class="hover:shadow-btn hidden md:block">
-                  <img
-                    src="./utils/images/icon-17.svg"
-                    alt="Icon"
-                    loading="lazy"
-                  />
-                </a>
-                <a
-                  href="profile.html"
-                  class="hover:shadow-btn rounded-full hidden md:block"
-                >
-                  <img
-                    src="./utils/images/user-photo.png"
-                    alt="User Photo"
-                    loaindg="lazy"
-                    class="h-10 w-10"
-                  />
-                </a>
-                <button class="text-clr_blue md:hidden" id="dashb-nav-openBtn">
-                  <i class="fas fa-bars text-xl"></i>
-                </button>
               </div>
             </div>
 
-            <div class="center h-[88vh]">
-              <p class="text-clr_black text-2xl font-light">
+            <div class="center min-h-[88vh] pt-2">
+              <p class="text-clr_black text-sm font-light">
                 PairTime <span class="font-extrabold">></span> Account
               </p>
-              <p class="text-clr_black text-4xl font-semibold mt-4 mb-6">
+              <p class="text-clr_black text-xl font-semibold mt-2 mb-6">
                 You don't have a billing address yet
               </p>
               <div class="border-b-[0.5px] opacity-60 w-3/5"></div>
-              <p class="text-clr_black text-xl font-semibold mt-6 mb-8">
+              <p class="text-clr_black text-xs font-semibold mt-4 mb-5">
                 You need to add it before you can buy or sell credits
               </p>
               <a href="create-billing.html">
                 <button
-                  class="bg-clr_blue text-xl py-3 px-8 text-white font-semibold rounded-2xl hover:shadow-btn mb-20"
+                  class="bg-clr_blue text-sm py-2 px-5 text-white font-semibold rounded-xl hover:shadow-btn mb-14"
                 >
                   Create Billing Profile
                 </button>
               </a>
-              <p class="text-clr_black text-4xl font-semibold mb-6">
+              <p class="text-clr_black text-xl font-semibold mb-4">
                 You can donate your credit to the scholarship pool.
               </p>
               <div class="border-b-[0.5px] opacity-60 w-3/5"></div>
-              <p class="text-clr_black text-xl font-semibold mt-6 mb-2">
+              <p class="text-clr_black text-xs font-semibold mt-4 mb-2">
                 PairTime will run the program in a transparent way in the near
                 Future.
               </p>
-              <p class="text-clr_black text-xl w-3/5 mb-4 font-light">
+              <p class="text-clr_black text-xs w-3/5 mb-4 font-light">
                 Note that each payout currency requires a separate onboarding
                 and verification process. You can use the same Stripe account
                 for different onboarding processes.
               </p>
               <a href="donate.html">
                 <button
-                  class="bg-clr_blue text-xl py-3 px-8 text-white font-semibold rounded-2xl mr-4 hover:shadow-btn"
+                  class="bg-clr_blue text-sm py-2 px-5 text-white font-semibold rounded-xl mr-2 hover:shadow-btn"
                 >
                   Donate
                 </button>
@@ -237,7 +260,7 @@
             class="absolute -left-4 -bottom-4 bg-[#33D9EF] w-8 h-8 rounded-full animtaion-infinite"
           ></div>
           <div
-            class="bg-[#F48C06] w-36 h-36 absolute bottom-60 -right-16 rounded-full animtaion-infinite"
+            class="bg-[#F48C06] w-24 h-24 absolute bottom-40 -right-10 rounded-full animtaion-infinite"
           ></div>
           <!-- </div> -->
         </section>
