--- a/create-billing.html
+++ b/create-billing.html
@@ -20,27 +20,27 @@
     <main class="bg-[#F7F8FB] overflow-hidden">
       <div class="flex overflow-hidden">
         <aside
-          class="h-screen absolute top-0 -left-full z-50 w-full bg-[#00000070] md:relative md:top-0 md:left-0 md:w-auto transition-all ease-in"
+          class="h-screen absolute top-0 -left-full z-50 w-full bg-[#00000080] md:relative md:top-0 md:left-0 md:w-[16rem] lg:w-80 transition-all ease-in"
           id="sidebar"
         >
           <button
-            class="text-xl absolute right-4 top-4 text-white font-normal cursor-pointer md:hidden"
+            class="text-clr_blue absolute right-4 top-4"
             id="dashb-nav-closeBtn"
           >
-            <i class="fas fa-times"></i>
+            <i class="fas fa-times text-sm text-white"></i>
           </button>
 
           <nav
-            class="w-[70%] bg-white h-screen flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-64 pr-5 md:pr-1 md:rounded-none"
+            class="w-[70%] bg-white h-screen flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
               <a href="dashboard.html">
-                <figure class="w-full px-5 py-6">
+                <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
                     alt="Company Logo"
                     loading="lazy"
-                    class="md:w-[80%] w-36 cursor-pointer"
+                    class="sm:w-[80%] w-28 cursor-pointer"
                   />
                 </figure>
               </a>
@@ -51,7 +51,7 @@
                     src="./utils/images/icon-17.svg"
                     alt="Icon"
                     loading="lazy"
-                    class="md:w-20 w-10"
+                    class="md:w-20 w-6"
                   />
                 </a>
                 <a href="profile.html" class="hover:shadow-btn rounded-full">
@@ -59,43 +59,44 @@
                     src="./utils/images/user-photo.png"
                     alt="User Photo"
                     loaindg="lazy"
-                    class="h-12 md:w-12 w-10"
+                    class="h-8 md:w-12 w-8"
                   />
                 </a>
-                <!-- <button class="text-clr_bluehidden" id="dashb-nav-openBtn">
-                  <i class="fas fa-bars text-4xl" id="nav-open-btn"></i>
-                </button> -->
               </div>
             </div>
+
             <div
               class="border-bottom w-full border-b-[0.5px] opacity-60 mb-6 hidden md:block"
             ></div>
+
             <ul class="flex-1 flex flex-col">
               <li>
                 <a
                   href="create-post.html"
-                  class="flex items-center pl-6 py-5 hover:text-clr_blue"
+                  class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
                     src="./utils/images/icon-10.svg"
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-sm font-semibold">Create A Post</span>
+                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                    >Create A Post</span
+                  >
                 </a>
               </li>
 
               <li>
                 <a
                   href=""
-                  class="flex items-center pl-6 py-5 hover:text-clr_blue"
+                  class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
                     src="./utils/images/icon-11.svg"
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-semibold"
                     >Fill Out Your Service Profile</span
                   >
                 </a>
@@ -104,28 +105,30 @@
               <li>
                 <a
                   href=""
-                  class="flex items-center pl-6 py-5 hover:text-clr_blue"
+                  class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
                     src="./utils/images/icon-12.svg"
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-sm font-semibold">Live Request</span>
+                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                    >Live Request</span
+                  >
                 </a>
               </li>
 
               <li>
                 <a
                   href="show-all.html"
-                  class="flex items-center pl-6 py-5 hover:text-clr_blue"
+                  class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
                     src="./utils/images/icon-13.svg"
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-semibold"
                     >Visible Profiles</span
                   >
                 </a>
@@ -141,7 +144,8 @@
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 poppins text-sm font-medium text-[#FF5223]"
+                  <span
+                    class="ml-2 text-xs lg:text-sm font-semibold text-[#FF5223]"
                     >Logout</span
                   >
                 </a>
@@ -152,72 +156,91 @@
 
         <section class="w-full relative">
           <div class="w-[90%] mx-auto">
-            <div class="top h-[12vh] flex justify-between items-center">
+            <div
+              class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
+            >
+              <div class="flex justify-between">
+                <a href="dashboard.html">
+                  <figure class="w-full md:px-3 py-6">
+                    <img
+                      src="./utils/images/pair-time.svg"
+                      alt="Company Logo"
+                      loading="lazy"
+                      class="sm:hidden w-24 cursor-pointer"
+                    />
+                  </figure>
+                </a>
+
+                <div class="user flex gap-5 items-center">
+                  <a
+                    href="account.html"
+                    class="hover:shadow-btn hidden md:block"
+                  >
+                    <img
+                      src="./utils/images/icon-17.svg"
+                      alt="Icon"
+                      loading="lazy"
+                    />
+                  </a>
+                  <a
+                    href="profile.html"
+                    class="hover:shadow-btn rounded-full hidden md:block"
+                  >
+                    <img
+                      src="./utils/images/user-photo.png"
+                      alt="User Photo"
+                      loaindg="lazy"
+                      class="lg:h-10 lg:w-10 h-8 w-8"
+                    />
+                  </a>
+                  <button class="text-clr_blue md:hidden">
+                    <i class="fas fa-bars text-sm" id="dashb-nav-openBtn"></i>
+                  </button>
+                </div>
+              </div>
+
               <div class="search-bar relative">
                 <input
                   type="text"
                   placeholder="Search Anything"
-                  class="w-72 pl-8 pr-2 py-3 text-xs rounded-xl border-none outline-none placeholder-primary"
+                  class="sm:w-56 lg:w-72 w-full pl-8 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
                 />
                 <img
                   src="./utils/images/search.svg"
                   alt="Search Icon"
                   loading="lazy"
-                  class="absolute top-3 left-3"
+                  class="absolute top-[30%] left-[3%] md:left-[5%]"
                 />
-              </div>
-              <div class="user flex gap-5 items-center">
-                <a href="account.html" class="hover:shadow-btn hidden md:block">
-                  <img
-                    src="./utils/images/icon-17.svg"
-                    alt="Icon"
-                    loading="lazy"
-                  />
-                </a>
-                <a
-                  href="profile.html"
-                  class="hover:shadow-btn rounded-full hidden md:block"
-                >
-                  <img
-                    src="./utils/images/user-photo.png"
-                    alt="User Photo"
-                    loaindg="lazy"
-                    class="h-10 w-10"
-                  />
-                </a>
-                <button class="text-clr_blue md:hidden" id="dashb-nav-openBtn">
-                  <i class="fas fa-bars text-xl"></i>
-                </button>
               </div>
             </div>
 
-            <div class="center mb-36 md:ml-[230px]">
-              <p class="text-clr_black text-2xl font-light">
+            <div class="center pt-2 pb-16">
+              <p class="text-clr_black text-sm font-light">
                 PairTime <span class="font-extrabold">></span> Account
                 <span class="font-extrabold">></span> Create Billing Profile
               </p>
-              <p class="text-clr_black text-4xl font-semibold mt-4 mb-6">
+              <p class="text-clr_black text-xl font-semibold mt-2 mb-4">
                 This information is visible to only you and the platform.
               </p>
               <div class="border-b-[0.5px] opacity-60 w-3/5"></div>
 
               <form class="lg:w-3/5 w-[90%]">
-                <p class="text-clr_black text-xl font-semibold mt-6 mb-8">
+                <p class="text-clr_black text-xs font-semibold mt-4 mb-5">
                   We need this for tax calculation and invoicing.
                 </p>
 
-                <div class="input-group mb-4">
-                  <label class="block text-xl text-clr_black font-semibold mb-4"
+                <div class="input-group mb-2">
+                  <label class="block text-xs text-clr_black font-semibold mb-2"
                     >Country
                   </label>
-                  <div class="flex gap-4">
+                  <div class="flex gap-2">
                     <input
                       type="text"
                       placeholder="find your country"
-                      class="py-3 px-5 rounded-xl w-2/5 text-lg placeholder-primary"
+                      class="py-3 px-3 rounded-lg w-2/5 text-xs placeholder-primary"
                     />
                     <select
-                      class="py-3 px-5 rounded-xl text-lg w-3/5 placeholder-primary"
+                      class="py-3 px-3 rounded-lg text-xs w-3/5 placeholder-primary"
                     >
                       <option value="">United Arab Emirates</option>
                       <option value="">United States of America</option>
@@ -226,19 +249,19 @@
                   </div>
                 </div>
 
-                <p class="text-clr_black text-xl mb-6 font-light">
+                <p class="text-clr_black text-xs mb-4 font-light">
                   If your country is not among the list, that means Stripe
                   doesn't support it. We are working on supporting more
                   countries.
                 </p>
 
                 <div class="input-group mb-8">
-                  <label class="block text-xl text-clr_black font-semibold mb-4"
+                  <label class="block text-xs text-clr_black font-semibold mb-2"
                     >Account Type
                   </label>
 
                   <select
-                    class="py-3 px-5 rounded-xl text-xl w-2/5 text-lg placeholder-primary"
+                    class="py-3 px-3 rounded-lg text-xs w-2/5 placeholder-primary"
                   >
                     <option value="">Individual</option>
                     <option value="">Group</option>
@@ -248,24 +271,24 @@
                 <div class="input-group mb-8 flex gap-2">
                   <div class="flex-1">
                     <label
-                      class="block text-xl text-clr_black font-semibold mb-4"
+                      class="block text-xs text-clr_black font-semibold mb-2"
                       >First Name
                     </label>
                     <input
                       type="text"
                       placeholder="Mudassar"
-                      class="py-3 px-5 rounded-xl w-full text-lg placeholder-primary"
+                      class="py-3 px-3 rounded-lg w-full text-xs placeholder-primary"
                     />
                   </div>
                   <div class="flex-1">
                     <label
-                      class="block text-xl text-clr_black font-semibold mb-4"
+                      class="block text-xs text-clr_black font-semibold mb-2"
                       >Last Name
                     </label>
                     <input
                       type="text"
                       placeholder="Haseeb"
-                      class="py-3 px-5 rounded-xl w-full text-lg placeholder-primary"
+                      class="py-3 px-3 rounded-lg w-full text-xs placeholder-primary"
                     />
                   </div>
                 </div>
@@ -273,24 +296,24 @@
                 <div class="input-group mb-8 flex gap-2">
                   <div class="flex-1">
                     <label
-                      class="block text-xl text-clr_black font-semibold mb-4"
+                      class="block text-xs text-clr_black font-semibold mb-2"
                       >Address Line 1
                     </label>
                     <input
                       type="text"
                       placeholder="Mudassar"
-                      class="py-3 px-5 rounded-xl w-full text-lg placeholder-primary"
+                      class="py-3 px-3 rounded-lg w-full text-xs placeholder-primary"
                     />
                   </div>
                   <div class="flex-1">
                     <label
-                      class="block text-xl text-clr_black font-semibold mb-4"
+                      class="block text-xs text-clr_black font-semibold mb-2"
                       >Address Line 2
                     </label>
                     <input
                       type="text"
                       placeholder="Haseeb"
-                      class="py-3 px-5 rounded-xl w-full text-lg placeholder-primary"
+                      class="py-3 px-3 rounded-lg w-full text-xs placeholder-primary"
                     />
                   </div>
                 </div>
@@ -298,24 +321,24 @@
                 <div class="input-group mb-8 flex gap-2">
                   <div class="w-3/4">
                     <label
-                      class="block text-xl text-clr_black font-semibold mb-4"
+                      class="block text-xs text-clr_black font-semibold mb-2"
                       >City
                     </label>
                     <input
                       type="text"
                       placeholder="Lahore"
-                      class="py-3 px-5 rounded-xl w-full text-lg placeholder-primary"
+                      class="py-3 px-3 rounded-lg w-full text-xs placeholder-primary"
                     />
                   </div>
                   <div class="w-1/4">
                     <label
-                      class="block lg:text-xl text-lg text-clr_black font-semibold mb-4"
+                      class="block text-xs text-clr_black font-semibold mb-2"
                       >ZIP code/Postcode
                     </label>
                     <input
                       type="text"
                       placeholder="51000"
-                      class="py-3 px-5 rounded-xl w-full text-lg placeholder-primary"
+                      class="py-3 px-3 rounded-lg w-full text-xs placeholder-primary"
                     />
                   </div>
                 </div>
@@ -323,7 +346,7 @@
                 <div class="input-group mb-8">
                   <div>
                     <label
-                      class="text-xl text-clr_black font-semibold mb-4 flex justify-between"
+                      class="text-xs text-clr_black font-semibold mb-2 flex justify-between"
                       >State/Province/Region
                       <span class="opacity-[0.5] text-[11px]"
                         >You can leave it empty if it doesn’t apply to
@@ -334,13 +357,13 @@
                     <input
                       type="text"
                       placeholder="Punjab"
-                      class="py-3 px-5 rounded-xl w-full text-lg placeholder-primary"
+                      class="py-3 px-3 rounded-lg w-full text-xs placeholder-primary"
                     />
                   </div>
                 </div>
 
                 <button
-                  class="bg-clr_blue text-xl py-3 px-8 text-white rounded-2xl mr-4 hover:shadow-btn"
+                  class="bg-clr_blue text-sm py-2 px-5 text-white rounded-xl hover:shadow-btn"
                 >
                   Save
                 </button>
@@ -353,7 +376,7 @@
             class="absolute -left-4 -bottom-4 bg-[#33D9EF] w-8 h-8 rounded-full"
           ></div>
           <div
-            class="bg-[#F48C06] w-44 h-44 fixed top-[40%] -right-20 rounded-full"
+            class="bg-[#F48C06] w-24 h-24 fixed top-[40%] -right-10 rounded-full"
           ></div>
           <!-- </div> -->
         </section>
