--- a/profile.html
+++ b/profile.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en" class="dashboard">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./utils/css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="./utils/css/styles.css" />
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <title>Profile - PairTime</title>
+  </head>
 
-  <title>Profile - PairTime</title>
-</head>
-
-<body>
-  <main class="min-h-screen bg-[#F7F8FB]">
-    <div class="flex h-screen">
-      <aside
-          class="h-screen absolute top-0 -left-full z-50 w-full bg-[#00000070] md:relative md:top-0 md:left-0 md:w-auto transition-all ease-in"
+  <body>
+    <main class="min-h-screen bg-[#F7F8FB]">
+      <div class="flex h-screen">
+        <aside
+          class="h-screen absolute top-0 -left-full z-50 w-full bg-[#00000080] md:relative md:top-0 md:left-0 md:w-[16rem] lg:w-80 transition-all ease-in"
           id="sidebar"
         >
           <button
-            class="text-xl absolute right-4 top-4 text-white font-normal cursor-pointer md:hidden"
+            class="text-clr_blue absolute right-4 top-4"
             id="dashb-nav-closeBtn"
           >
-            <i class="fas fa-times"></i>
+            <i class="fas fa-times text-xl text-white"></i>
           </button>
 
           <nav
-            class="w-[70%] bg-white h-screen flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-64 pr-5 md:pr-1 md:rounded-none"
+            class="w-[70%] bg-white h-screen flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
               <a href="dashboard.html">
@@ -37,7 +40,7 @@
                     src="./utils/images/pair-time.svg"
                     alt="Company Logo"
                     loading="lazy"
-                    class="md:w-[80%] w-36 cursor-pointer"
+                    class="sm:w-[80%] w-28 cursor-pointer"
                   />
                 </figure>
               </a>
@@ -48,7 +51,7 @@
                     src="./utils/images/icon-17.svg"
                     alt="Icon"
                     loading="lazy"
-                    class="md:w-20 w-10"
+                    class="md:w-20 w-6"
                   />
                 </a>
                 <a href="profile.html" class="hover:shadow-btn rounded-full">
@@ -56,43 +59,44 @@
                     src="./utils/images/user-photo.png"
                     alt="User Photo"
                     loaindg="lazy"
-                    class="h-12 md:w-12 w-10"
+                    class="h-8 md:w-12 w-8"
                   />
                 </a>
-                <!-- <button class="text-clr_bluehidden" id="dashb-nav-openBtn">
-                  <i class="fas fa-bars text-4xl" id="nav-open-btn"></i>
-                </button> -->
               </div>
             </div>
+
             <div
               class="border-bottom w-full border-b-[0.5px] opacity-60 mb-6 hidden md:block"
             ></div>
+
             <ul class="flex-1 flex flex-col">
               <li>
                 <a
                   href="create-post.html"
-                  class="flex items-center pl-6 py-5 hover:text-clr_blue"
+                  class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
                     src="./utils/images/icon-10.svg"
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-sm font-semibold">Create A Post</span>
+                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                    >Create A Post</span
+                  >
                 </a>
               </li>
 
               <li>
                 <a
                   href=""
-                  class="flex items-center pl-6 py-5 hover:text-clr_blue"
+                  class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
                     src="./utils/images/icon-11.svg"
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-semibold"
                     >Fill Out Your Service Profile</span
                   >
                 </a>
@@ -101,28 +105,30 @@
               <li>
                 <a
                   href=""
-                  class="flex items-center pl-6 py-5 hover:text-clr_blue"
+                  class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
                     src="./utils/images/icon-12.svg"
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-sm font-semibold">Live Request</span>
+                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                    >Live Request</span
+                  >
                 </a>
               </li>
 
               <li>
                 <a
                   href="show-all.html"
-                  class="flex items-center pl-6 py-5 hover:text-clr_blue"
+                  class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
                     src="./utils/images/icon-13.svg"
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-semibold"
                     >Visible Profiles</span
                   >
                 </a>
@@ -138,7 +144,8 @@
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 poppins text-sm font-medium text-[#FF5223]"
+                  <span
+                    class="ml-2 text-xs lg:text-sm font-semibold text-[#FF5223]"
                     >Logout</span
                   >
                 </a>
@@ -147,118 +154,208 @@
           </nav>
         </aside>
 
-      <section class="w-full relative overflow-hidden">
-        <div class="w-[90%] mx-auto">
-          <button class="text-4xl absolute right-8 top-8 text-white font-normal cursor-pointer md:hidden"
+        <section class="w-full relative overflow-hidden">
+          <div class="w-[90%] mx-auto">
+            <div
+              class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
+            >
+              <div class="flex justify-between">
+                <a href="dashboard.html">
+                  <figure class="w-full md:px-5 py-6">
+                    <img
+                      src="./utils/images/pair-time.svg"
+                      alt="Company Logo"
+                      loading="lazy"
+                      class="sm:hidden w-24 cursor-pointer"
+                    />
+                  </figure>
+                </a>
 
-
-          <div class="center h-[88vh]">
-            <p class="text-clr_black text-2xl  font-light">
-              PairTime <span class="font-extrabold">></span> Profile
-            </p>
-            <p class="text-clr_black text-4xl  font-semibold mt-4 mb-16">
-              You can edit and update your profile
-            </p>
-
-            <div class="flex flex-col md:flex-row items-center md:items-start gap-16">
-              <div class="left w-full md:w-fit">
-                <div class="input-group">
-                  <label class="block text-xl  text-clr_black font-semibold mb-4">Profile Photo</label>
-                  <div class="h-96 md:h-80 w-full md:w-80 rounded-2xl mt-3 mb-6 bg-white"></div>
-                </div>
-                <div class="btns flex justify-center gap-4">
-                  <button
-                    class="bg-clr_blue text-xl py-2 px-8 text-white rounded-3xl hover:shadow-btn  font-semibold">
-                    Edit
-                  </button>
-                  <button
-                    class="bg-[#FF3D00] text-xl py-2 px-5 text-white rounded-3xl hover:shadow-btn  font-semibold">
-                    Delete
+                <div class="user flex gap-5 items-center">
+                  <a
+                    href="account.html"
+                    class="hover:shadow-btn hidden md:block"
+                  >
+                    <img
+                      src="./utils/images/icon-17.svg"
+                      alt="Icon"
+                      loading="lazy"
+                    />
+                  </a>
+                  <a
+                    href="profile.html"
+                    class="hover:shadow-btn rounded-full hidden md:block"
+                  >
+                    <img
+                      src="./utils/images/user-photo.png"
+                      alt="User Photo"
+                      loaindg="lazy"
+                      class="lg:h-10 lg:w-10 h-8 w-8"
+                    />
+                  </a>
+                  <button class="text-clr_blue md:hidden">
+                    <i class="fas fa-bars text-xl" id="dashb-nav-openBtn"></i>
                   </button>
                 </div>
               </div>
 
-              <div class="right flex-1 w-full">
-                <form class="w-full md:w-[70%] w-full">
-                  <div class="input-group mb-10">
-                    <label for="" class="block text-xl text-clr_black mb-4  font-semibold">The name you’ll
-                      show to others</label>
-                    <input type="text" placeholder="Jamery Aver"
-                      class="py-3 px-5 rounded-xl w-1/2 text-lg  placeholder-primary" />
-                  </div>
+              <div class="search-bar relative">
+                <input
+                  type="text"
+                  placeholder="Search Anything"
+                  class="sm:w-56 lg:w-72 w-full pl-8 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
+                />
+                <img
+                  src="./utils/images/search.svg"
+                  alt="Search Icon"
+                  loading="lazy"
+                  class="absolute top-[30%] left-[3%] md:left-[5%]"
+                />
+              </div>
+            </div>
 
-                  <div class="input-group mb-10">
-                    <label for="" class="text-xl text-clr_black mb-4  font-semibold flex justify-between">A
-                      short biography (optional)
-                      <span>You have 72/100 in Bio.</span></label>
-                    <textarea type="text" placeholder="I’m full stack designer"
-                      class="py-3 px-5 rounded-xl w-full text-lg block h-32 placeholder-primary "></textarea>
-                  </div>
+            <div class="center min-h-[88vh] pt-2">
+              <p class="text-clr_black text-sm font-light">
+                PairTime <span class="font-extrabold">></span> Profile
+              </p>
+              <p class="text-clr_black text-xl font-semibold mt-2 mb-10">
+                You can edit and update your profile
+              </p>
 
-                  <div class="input-group mb-10">
-                    <label for="" class="block text-xl text-clr_black mb-4  font-semibold">Default time zone
-                      (optional)
-                    </label>
-                    <div class="flex gap-4">
-                      <input type="text" placeholder="find time zone"
-                        class="py-3 px-5 rounded-xl w-3/5 text-lg placeholder-primary " />
-                      <select class="py-3 px-5 rounded-xl text-lg w-2/5  text-[#191453]">
-                        <option value="">
-                          Asia/Karachi (currently +5:00)
-                        </option>
-                        <option value="">
-                          Asia/Karachi (currently +5:00)
-                        </option>
-                        <option value="">
-                          Asia/Karachi (currently +5:00)
-                        </option>
-                      </select>
+              <div
+                class="flex flex-col md:flex-row items-center md:items-start gap-10"
+              >
+                <div class="left w-full md:w-fit">
+                  <div class="input-group">
+                    <label
+                      class="block text-sm text-clr_black font-semibold mb-2"
+                      >Profile Photo</label
+                    >
+                    <div
+                      class="h-56 md:h-48 w-full md:w-48 rounded-lg mt-2 mb-3 bg-white"
+                    ></div>
+                  </div>
+                  <div class="btns flex justify-center gap-2">
+                    <button
+                      class="bg-clr_blue text-xs py-1 px-4 text-white rounded-2xl hover:shadow-btn font-semibold"
+                    >
+                      Edit
+                    </button>
+                    <button
+                      class="bg-[#FF3D00] text-xs py-1 px-3 text-white rounded-2xl hover:shadow-btn font-semibold"
+                    >
+                      Delete
+                    </button>
+                  </div>
+                </div>
+
+                <div class="right flex-1 w-full">
+                  <form class="w-full md:w-[70%] w-full">
+                    <div class="input-group mb-6">
+                      <label
+                        for=""
+                        class="block text-sm text-clr_black mb-2 font-semibold"
+                        >The name you’ll show to others</label
+                      >
+                      <input
+                        type="text"
+                        placeholder="Jamery Aver"
+                        class="py-2 px-3 rounded-lg w-1/2 text-sm placeholder-primary"
+                      />
                     </div>
-                  </div>
 
-                  <div class="btns text-right mt-16">
-                    <button
-                      class="bg-clr_blue text-xl py-3 px-8 text-white rounded-2xl mr-4  font-semibold hover:shadow-btn">
-                      Update
-                    </button>
-                    <button
-                      class="bg-[#ECECEC] text-xl py-3 px-8 text-[#A6A6A6] rounded-2xl  font-semibold hover:shadow-btn">
-                      Cancel
-                    </button>
-                  </div>
-                </form>
+                    <div class="input-group mb-6">
+                      <label
+                        for=""
+                        class="text-sm text-clr_black mb-2 font-semibold flex justify-between"
+                        >A short biography (optional)
+                        <span class="text-[#5A5881 font-normal"
+                          >You have 72/100 in Bio.</span
+                        ></label
+                      >
+                      <textarea
+                        type="text"
+                        placeholder="I’m full stack designer"
+                        class="py-2 px-3 rounded-lg w-full text-sm block h-20 placeholder-primary"
+                      ></textarea>
+                    </div>
+
+                    <div class="input-group mb-6">
+                      <label
+                        for=""
+                        class="block text-sm text-clr_black mb-2 font-semibold"
+                        >Default time zone (optional)
+                      </label>
+                      <div class="flex gap-2">
+                        <input
+                          type="text"
+                          placeholder="find time zone"
+                          class="py-2 px-3 rounded-lg w-3/5 text-sm placeholder-primary"
+                        />
+                        <select
+                          class="py-2 px-3 rounded-lg text-sm w-2/5 text-[#191453]"
+                        >
+                          <option value="">
+                            Asia/Karachi (currently +5:00)
+                          </option>
+                          <option value="">
+                            Asia/Karachi (currently +5:00)
+                          </option>
+                          <option value="">
+                            Asia/Karachi (currently +5:00)
+                          </option>
+                        </select>
+                      </div>
+                    </div>
+
+                    <div class="btns text-right mt-10">
+                      <button
+                        class="bg-clr_blue text-sm py-2 px-5 text-white rounded-lg mr-2 font-semibold hover:shadow-btn"
+                      >
+                        Update
+                      </button>
+                      <button
+                        class="bg-[#ECECEC] text-sm py-2 px-5 text-[#A6A6A6] rounded-lg font-semibold hover:shadow-btn"
+                      >
+                        Cancel
+                      </button>
+                    </div>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
-        <!-- <div class="circle absolute -left-12 -bottom-16"> -->
-        <div class="absolute -left-4 -bottom-4 bg-[#33D9EF] w-8 h-8 rounded-full animtaion-infinite"></div>
-        <div class="bg-[#F48C06] w-44 h-44 absolute -bottom-20 -right-20 rounded-full animtaion-infinite"></div>
-        <!-- </div> -->
-      </section>
-    </div>
-  </main>
+          <!-- <div class="circle absolute -left-12 -bottom-16"> -->
+          <div
+            class="absolute -left-2 -bottom-2 bg-[#33D9EF] w-6 h-6 rounded-full animtaion-infinite"
+          ></div>
+          <div
+            class="bg-[#F48C06] w-28 h-28 absolute -bottom-12 -right-12 rounded-full animtaion-infinite"
+          ></div>
+          <!-- </div> -->
+        </section>
+      </div>
+    </main>
 
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          boxShadow: {
-            btn: "0px 10px 30px rgba(86, 59, 255, 0.26)",
-          },
-          colors: {
-            clr_black: "#191453",
-            clr_blue: "#250CED",
-          },
-          placeholderColor: {
-            primary: "#5A5881",
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            boxShadow: {
+              btn: "0px 10px 30px rgba(86, 59, 255, 0.26)",
+            },
+            colors: {
+              clr_black: "#191453",
+              clr_blue: "#250CED",
+            },
+            placeholderColor: {
+              primary: "#5A5881",
+            },
           },
         },
-      },
-    };
-  </script>
-  <script src="./utils/js/dashboard.js"></script>
-</body>
-
+      };
+    </script>
+    <script src="./utils/js/dashboard.js"></script>
+  </body>
 </html>
