--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <li class="md:text-sm text-lg hover:text-orange-500">
               <a href="">User Group Slack</a>
             </li>
-            <a href="dashboard.html">
+            <a href="./dashboard">
               <li
                 class="rounded-[3rem] md:px-8 px-10 py-1 sm:py-2 bg-[#F48C06] text-white md:text-sm text-lg shadow-lg hover:scale-105 active:scale-[0.8] transition ease-in-out"
               >
@@ -353,7 +353,7 @@
                     class="h-full w-full"
                   />
                 </figure>
-                <p class="text-xs sm:text-base flex-1 leading-6">
+                <p class="text-xs sm:text-base flex-1">
                   Create a minimal profile that your pair will see.
                 </p>
               </li>
@@ -369,7 +369,7 @@
                     class="h-full w-full"
                   />
                 </figure>
-                <p class="text-xs sm:text-base flex-1 leading-6">
+                <p class="text-xs sm:text-base flex-1">
                   If you want to use paid pairing services, you also need a
                   billing profile visible only to us.
                 </p>
@@ -386,7 +386,7 @@
                     class="h-full w-full"
                   />
                 </figure>
-                <p class="text-xs sm:text-base flex-1 leading-6">
+                <p class="text-xs sm:text-base flex-1">
                   Create a post describing what you want to achieve with your
                   pair, and with your time and budget. Share only public
                   information in it.
@@ -404,7 +404,7 @@
                     class="h-full w-full"
                   />
                 </figure>
-                <p class="text-xs sm:text-base flex-1 leading-6">
+                <p class="text-xs sm:text-base flex-1">
                   Wait for offers to come. You will get emails. When you accept
                   one, the pairing session is scheduled, and you will get an
                   email with an event calendar.
@@ -422,7 +422,7 @@
                     class="h-full w-full"
                   />
                 </figure>
-                <p class="text-xs sm:text-base flex-1 leading-6">
+                <p class="text-xs sm:text-base flex-1">
                   After the session, credits will immediately move from your
                   account to your pair's. The amount is calculated based on the
                   actual meeting time and your pair's hourly rate. If your
@@ -486,7 +486,7 @@
                     class="h-full w-full"
                   />
                 </figure>
-                <p class="text-xs sm:text-base flex-1 leading-6">
+                <p class="text-xs sm:text-base flex-1 offer-para">
                   You need a service profile besides your base profile to
                   receive relevant recommendations.
                 </p>
@@ -503,7 +503,7 @@
                     class="h-full w-full"
                   />
                 </figure>
-                <p class="text-xs sm:text-base flex-1 leading-6">
+                <p class="text-xs sm:text-base flex-1 offer-para">
                   You don't need a billing profile to start providing paid
                   services. You can't cash out until you have finished the
                   verification steps.
@@ -521,7 +521,7 @@
                     class="h-full w-full"
                   />
                 </figure>
-                <p class="text-xs sm:text-base flex-1 leading-6">
+                <p class="text-xs sm:text-base flex-1 offer-para">
                   You can see new requests that match your service profile under
                   "View service requests". You can also browse all live posts if
                   you want.
@@ -539,7 +539,7 @@
                     class="h-full w-full"
                   />
                 </figure>
-                <p class="text-xs sm:text-base flex-1 leading-6">
+                <p class="text-xs sm:text-base flex-1 offer-para">
                   You can submit your offers to requests that you want to help
                   with. When your offer has been accepted, the pairing session
                   is scheduled and you will get an email with an event calendar.
@@ -557,7 +557,7 @@
                     class="h-full w-full"
                   />
                 </figure>
-                <p class="text-xs sm:text-base flex-1 leading-6">
+                <p class="text-xs sm:text-base flex-1 offer-para">
                   After the session, credits will immediately move from your
                   pair's account to yours if there is enough balance. The amount
                   is calculated based on the actual meeting time and your hourly
@@ -579,7 +579,7 @@
                     class="h-full w-full"
                   />
                 </figure>
-                <p class="text-xs sm:text-base flex-1 leading-6">
+                <p class="text-xs sm:text-base flex-1 offer-para">
                   When you cash out, we immediately send a recipient created
                   invoice to you, but you will receive the money (including tax
                   whenever applicable) on your bank account in about a week
@@ -590,7 +590,7 @@
 
             <div class="flex-1 flex justify-center -mb-8 lg:mb-0">
               <div data-aos="fade-right">
-                <figure class="h-[90%] lg:w-[90%] w-[18rem]">
+                <figure class="h-[90%] lg:h-[70%] lg:w-[90%] w-[18rem]">
                   <img
                     src="./utils/images/laughing-girl.png"
                     alt="Girl Smiling"
@@ -726,7 +726,7 @@
 
           <div
             data-aos="fade-left"
-            class="relative overflow-hidden sm:w-[35rem] w-[19rem] mx-auto"
+            class="relative overflow-hidden sm:w-[33rem] w-[19rem] border-2"
           >
             <button
               class="absolute h-[6rem] w-[6rem] top-[22%] left-[50%] z-50 border-none outline-none"
