--- a/account.html
+++ b/account.html
@@ -17,10 +17,10 @@
   </head>
 
   <body>
-    <main class="min-h-screen bg-[#F7F8FB]">
+    <main class="min-h-screen bg-[#F7F8FB] overflow-hidden">
       <div class="flex">
         <aside
-          class="h-screen absolute top-0 -left-full z-50 w-full bg-[#00000080] md:relative md:top-0 md:left-0 md:w-[16rem] lg:w-80 transition-all ease-in"
+          class="h-screen absolute top-0 -left-full z-50 w-full bg-[#00000080] md:fixed md:top-0 md:left-0 md:w-[12rem] lg:w-64 transition-all ease-in"
           id="sidebar"
         >
           <button
@@ -31,11 +31,11 @@
           </button>
 
           <nav
-            class="w-[70%] bg-white h-screen flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
+            class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
               <a href="dashboard.html">
-                <figure class="w-full px-5 py-6">
+                <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
                     alt="Company Logo"
@@ -80,7 +80,7 @@
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-medium"
                     >Create A Post</span
                   >
                 </a>
@@ -96,7 +96,7 @@
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-medium"
                     >Fill Out Your Service Profile</span
                   >
                 </a>
@@ -112,7 +112,7 @@
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-medium"
                     >Live Request</span
                   >
                 </a>
@@ -128,7 +128,7 @@
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-medium"
                     >Visible Profiles</span
                   >
                 </a>
@@ -145,16 +145,20 @@
                     loading="lazy"
                   />
                   <span
-                    class="ml-2 text-xs lg:text-sm font-semibold text-[#FF5223]"
+                    class="ml-2 text-xs lg:text-sm font-medium text-[#FF5223]"
                     >Logout</span
                   >
                 </a>
               </li>
             </ul>
           </nav>
+
+          <div
+            class="absolute -z-10 -right-2 bottom-0 bg-[#33D9EF] w-4 h-4 rounded-full animtaion-infinite"
+          ></div>
         </aside>
 
-        <section class="w-full relative overflow-hidden">
+        <section class="w-full relative md:ml-[12rem] lg:ml-64 min-h-screen">
           <div class="w-[90%] mx-auto">
             <div
               class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
@@ -214,40 +218,42 @@
               </div>
             </div>
 
-            <div class="center min-h-[88vh] pt-2">
-              <p class="text-clr_black text-sm font-light">
+            <div class="center pt-5 lg:pt-2 pb-8">
+              <p class="text-clr_black text-xs lg:text-sm font-light">
                 PairTime <span class="font-extrabold">></span> Account
               </p>
-              <p class="text-clr_black text-xl font-semibold mt-2 mb-6">
+              <p
+                class="text-clr_black text-base lg:text-xl font-semibold mt-2 mb-4"
+              >
                 You don't have a billing address yet
               </p>
-              <div class="border-b-[0.5px] opacity-60 w-3/5"></div>
+              <div class="border-b lg:w-3/5"></div>
               <p class="text-clr_black text-xs font-semibold mt-4 mb-5">
                 You need to add it before you can buy or sell credits
               </p>
               <a href="create-billing.html">
                 <button
-                  class="bg-clr_blue text-sm py-2 px-5 text-white font-semibold rounded-xl hover:shadow-btn mb-14"
+                  class="bg-clr_blue text-xs lg:text-sm py-2 px-5 text-white font-semibold rounded-2xl hover:shadow-btn mb-14 w-full sm:w-auto"
                 >
                   Create Billing Profile
                 </button>
               </a>
-              <p class="text-clr_black text-xl font-semibold mb-4">
+              <p class="text-clr_black text-base lg:text-xl font-semibold mb-4">
                 You can donate your credit to the scholarship pool.
               </p>
-              <div class="border-b-[0.5px] opacity-60 w-3/5"></div>
+              <div class="border-b-[0.5px] opacity-60 lg:w-3/5"></div>
               <p class="text-clr_black text-xs font-semibold mt-4 mb-2">
                 PairTime will run the program in a transparent way in the near
                 Future.
               </p>
-              <p class="text-clr_black text-xs w-3/5 mb-4 font-light">
+              <p class="text-clr_black text-xs lg:w-3/5 mb-4 font-light">
                 Note that each payout currency requires a separate onboarding
                 and verification process. You can use the same Stripe account
                 for different onboarding processes.
               </p>
               <a href="donate.html">
                 <button
-                  class="bg-clr_blue text-sm py-2 px-5 text-white font-semibold rounded-xl mr-2 hover:shadow-btn"
+                  class="bg-clr_blue text-xs lg:text-sm py-2 px-5 text-white font-semibold rounded-2xl hover:shadow-btn w-full sm:w-auto"
                 >
                   Donate
                 </button>
@@ -256,11 +262,11 @@
           </div>
 
           <!-- <div class="circle absolute -left-12 -bottom-16"> -->
-          <div
+          <!-- <div
             class="absolute -left-4 -bottom-4 bg-[#33D9EF] w-8 h-8 rounded-full animtaion-infinite"
-          ></div>
+          ></div> -->
           <div
-            class="bg-[#F48C06] w-24 h-24 absolute bottom-40 -right-10 rounded-full animtaion-infinite"
+            class="hidden md:block bg-[#F48C06] w-24 h-24 absolute bottom-40 -right-10 rounded-full animtaion-infinite"
           ></div>
           <!-- </div> -->
         </section>
