--- a/dashboard.html
+++ b/dashboard.html
@@ -18,7 +18,7 @@
 
   <body>
     <main class="w-full min-h-screen bg-[#F7F8FB]">
-      <div class="flex h-screen">
+      <div class="flex">
         <aside
           class="h-screen absolute top-0 -left-full z-50 w-full bg-[#00000080] md:relative md:top-0 md:left-0 md:w-[16rem] lg:w-80 transition-all ease-in"
           id="sidebar"
@@ -80,7 +80,7 @@
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-medium"
                     >Create A Post</span
                   >
                 </a>
@@ -96,7 +96,7 @@
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-medium"
                     >Fill Out Your Service Profile</span
                   >
                 </a>
@@ -112,7 +112,7 @@
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-medium"
                     >Live Request</span
                   >
                 </a>
@@ -128,7 +128,7 @@
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-medium"
                     >Visible Profiles</span
                   >
                 </a>
@@ -145,7 +145,7 @@
                     loading="lazy"
                   />
                   <span
-                    class="ml-2 text-xs lg:text-sm font-semibold text-[#FF5223]"
+                    class="ml-2 text-xs lg:text-sm font-medium text-[#FF5223]"
                     >Logout</span
                   >
                 </a>
@@ -154,7 +154,7 @@
           </nav>
         </aside>
 
-        <section class="w-full relative overflow-hidden">
+        <section class="w-full relative md:ml-[12rem] lg:ml-64 min-h-screen">
           <div class="w-[90%] mx-auto">
             <div
               class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
@@ -215,7 +215,7 @@
             </div>
 
             <div
-              class="center min-h-[88vh] flex justify-center items-center -mt-8 md:mt-auto"
+              class="center min-h-[88vh] flex justify-center items-center md:mt-auto"
             >
               <div
                 class="content text-center flex flex-col items-center relative"
