--- a/profile.html
+++ b/profile.html
@@ -17,10 +17,10 @@
   </head>
 
   <body>
-    <main class="min-h-screen bg-[#F7F8FB]">
-      <div class="flex h-screen">
+    <main class="min-h-screen bg-[#F7F8FB] overflow-hidden">
+      <div class="flex">
         <aside
-          class="h-screen absolute top-0 -left-full z-50 w-full bg-[#00000080] md:relative md:top-0 md:left-0 md:w-[16rem] lg:w-80 transition-all ease-in"
+          class="h-screen absolute top-0 -left-full z-50 w-full bg-[#00000080] md:fixed md:top-0 md:left-0 md:w-[12rem] lg:w-64 transition-all ease-in"
           id="sidebar"
         >
           <button
@@ -31,11 +31,11 @@
           </button>
 
           <nav
-            class="w-[70%] bg-white h-screen flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
+            class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
               <a href="dashboard.html">
-                <figure class="w-full px-5 py-6">
+                <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
                     alt="Company Logo"
@@ -80,7 +80,7 @@
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-medium"
                     >Create A Post</span
                   >
                 </a>
@@ -96,7 +96,7 @@
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-medium"
                     >Fill Out Your Service Profile</span
                   >
                 </a>
@@ -112,7 +112,7 @@
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-medium"
                     >Live Request</span
                   >
                 </a>
@@ -128,7 +128,7 @@
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-medium"
                     >Visible Profiles</span
                   >
                 </a>
@@ -145,16 +145,20 @@
                     loading="lazy"
                   />
                   <span
-                    class="ml-2 text-xs lg:text-sm font-semibold text-[#FF5223]"
+                    class="ml-2 text-xs lg:text-sm font-medium text-[#FF5223]"
                     >Logout</span
                   >
                 </a>
               </li>
             </ul>
           </nav>
+
+          <div
+            class="absolute -z-10 -right-2 -bottom-1 bg-[#33D9EF] w-4 h-4 rounded-full animtaion-infinite"
+          ></div>
         </aside>
 
-        <section class="w-full relative overflow-hidden">
+        <section class="w-full relative md:ml-[12rem] lg:ml-64 min-h-screen">
           <div class="w-[90%] mx-auto">
             <div
               class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
@@ -214,35 +218,35 @@
               </div>
             </div>
 
-            <div class="center min-h-[88vh] pt-2">
-              <p class="text-clr_black text-sm font-light">
+            <div class="center pt-5 lg:pt-2 h-full pb-8">
+              <p class="text-clr_black text-xs lg:text-sm font-light">
                 PairTime <span class="font-extrabold">></span> Profile
               </p>
-              <p class="text-clr_black text-xl font-semibold mt-2 mb-10">
+              <p
+                class="text-clr_black text-base lg:text-xl font-semibold mt-2 mb-10"
+              >
                 You can edit and update your profile
               </p>
 
-              <div
-                class="flex flex-col md:flex-row items-center md:items-start gap-10"
-              >
+              <div class="md:flex md:items-start gap-4 lg:gap-10">
                 <div class="left w-full md:w-fit">
                   <div class="input-group">
                     <label
-                      class="block text-sm text-clr_black font-semibold mb-2"
+                      class="block text-xs text-clr_black font-semibold mb-2"
                       >Profile Photo</label
                     >
                     <div
-                      class="h-56 md:h-48 w-full md:w-48 rounded-lg mt-2 mb-3 bg-white"
+                      class="h-56 w-full md:h-40 md:w-40 lg:h-48 lg:w-48 rounded-lg mt-2 mb-4 bg-white"
                     ></div>
                   </div>
-                  <div class="btns flex justify-center gap-2">
+                  <div class="btns flex justify-center gap-2 mb-8">
                     <button
-                      class="bg-clr_blue text-xs py-1 px-4 text-white rounded-2xl hover:shadow-btn font-semibold"
+                      class="bg-clr_blue w-1/2 md:w-auto text-xs md:py-1 py-2 px-4 text-white rounded-2xl hover:shadow-btn font-semibold"
                     >
                       Edit
                     </button>
                     <button
-                      class="bg-[#FF3D00] text-xs py-1 px-3 text-white rounded-2xl hover:shadow-btn font-semibold"
+                      class="bg-[#FF3D00] w-1/2 md:w-auto text-xs py-1 px-3 text-white rounded-2xl hover:shadow-btn font-semibold"
                     >
                       Delete
                     </button>
@@ -250,72 +254,70 @@
                 </div>
 
                 <div class="right flex-1 w-full">
-                  <form class="w-full md:w-[70%] w-full">
+                  <form class="w-full lg:w-[70%]">
                     <div class="input-group mb-6">
                       <label
-                        for=""
-                        class="block text-sm text-clr_black mb-2 font-semibold"
+                        class="block text-xs text-clr_black mb-2 font-semibold"
                         >The name you’ll show to others</label
                       >
                       <input
                         type="text"
                         placeholder="Jamery Aver"
-                        class="py-2 px-3 rounded-lg w-1/2 text-sm placeholder-primary"
+                        class="py-3 px-3 rounded-lg w-full lg:w-1/2 text-xs placeholder-primary"
                       />
                     </div>
 
                     <div class="input-group mb-6">
                       <label
-                        for=""
-                        class="text-sm text-clr_black mb-2 font-semibold flex justify-between"
+                        class="text-xs text-clr_black mb-2 font-semibold flex justify-between"
                         >A short biography (optional)
-                        <span class="text-[#5A5881 font-normal"
+                        <span class="text-[#5A5881] font-normal"
                           >You have 72/100 in Bio.</span
                         ></label
                       >
                       <textarea
                         type="text"
                         placeholder="I’m full stack designer"
-                        class="py-2 px-3 rounded-lg w-full text-sm block h-20 placeholder-primary"
+                        class="py-3 px-3 rounded-lg w-full text-xs block h-20 placeholder-primary"
                       ></textarea>
                     </div>
 
                     <div class="input-group mb-6">
                       <label
-                        for=""
-                        class="block text-sm text-clr_black mb-2 font-semibold"
+                        class="block text-xs text-clr_black mb-2 font-semibold"
                         >Default time zone (optional)
                       </label>
-                      <div class="flex gap-2">
+                      <div class="md:flex gap-2">
                         <input
                           type="text"
                           placeholder="find time zone"
-                          class="py-2 px-3 rounded-lg w-3/5 text-sm placeholder-primary"
+                          class="py-3 px-3 rounded-lg md:w-4/7 w-full text-xs placeholder-primary mb-2 md:mb-0"
                         />
-                        <select
-                          class="py-2 px-3 rounded-lg text-sm w-2/5 text-[#191453]"
-                        >
-                          <option value="">
-                            Asia/Karachi (currently +5:00)
-                          </option>
-                          <option value="">
-                            Asia/Karachi (currently +5:00)
-                          </option>
-                          <option value="">
-                            Asia/Karachi (currently +5:00)
-                          </option>
-                        </select>
+                        <div class="md:w-3/7 w-full relative">
+                          <select
+                            class="py-3 px-3 rounded-lg text-xs text-[#191453] w-full appearance-none"
+                          >
+                            <option>Asia/Karachi (currently +5:00)</option>
+                            <option>Asia/Karachi (currently +5:00)</option>
+                            <option>Asia/Karachi (currently +5:00)</option>
+                          </select>
+                          <span
+                            class="drop-icon absolute right-3 top-[12%] bg-white px-2 pointer-events-none"
+                          >
+                            <i class="fas fa-sort-down"></i>
+                          </span>
+                        </div>
                       </div>
                     </div>
 
-                    <div class="btns text-right mt-10">
+                    <div class="btns flex gap-2 md:justify-end -mt-2 md:mt-10">
                       <button
-                        class="bg-clr_blue text-sm py-2 px-5 text-white rounded-lg mr-2 font-semibold hover:shadow-btn"
+                        class="bg-clr_blue text-sm py-2 px-5 text-white rounded-xl md:mr-2 font-semibold hover:shadow-btn w-1/2 md:w-auto"
                       >
                         Update
                       </button>
                       <button
-                        class="bg-[#ECECEC] text-sm py-2 px-5 text-[#A6A6A6] rounded-lg font-semibold hover:shadow-btn"
+                        class="bg-[#ECECEC] text-sm py-2 px-5 text-[#A6A6A6] rounded-xl font-semibold hover:shadow-btn w-1/2 md:w-auto"
                       >
                         Cancel
                       </button>
@@ -327,11 +329,11 @@
           </div>
 
           <!-- <div class="circle absolute -left-12 -bottom-16"> -->
-          <div
+          <!-- <div
             class="absolute -left-2 -bottom-2 bg-[#33D9EF] w-6 h-6 rounded-full animtaion-infinite"
-          ></div>
+          ></div> -->
           <div
-            class="bg-[#F48C06] w-28 h-28 absolute -bottom-12 -right-12 rounded-full animtaion-infinite"
+            class="bg-[#F48C06] md:w-28 md:h-28 w-20 h-20 absolute -bottom-12 -right-12 rounded-full animtaion-infinite"
           ></div>
           <!-- </div> -->
         </section>
