--- a/show-all.html
+++ b/show-all.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <main class="bg-[#F7F8FB] overflow-hidden">
+  <main class="bg-[#F7F8FB]">
     <div class="h-full flex">
       <aside
           class="h-screen absolute top-0 -left-full z-50 w-full bg-[#00000080] md:relative md:top-0 md:left-0 md:w-[16rem] lg:w-80 transition-all ease-in"
@@ -77,7 +77,7 @@
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-medium"
                     >Create A Post</span
                   >
                 </a>
@@ -93,7 +93,7 @@
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-medium"
                     >Fill Out Your Service Profile</span
                   >
                 </a>
@@ -109,7 +109,7 @@
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-medium"
                     >Live Request</span
                   >
                 </a>
@@ -125,7 +125,7 @@
                     alt="Icon"
                     loading="lazy"
                   />
-                  <span class="ml-2 text-xs lg:text-sm font-semibold"
+                  <span class="ml-2 text-xs lg:text-sm font-medium"
                     >Visible Profiles</span
                   >
                 </a>
@@ -142,7 +142,7 @@
                     loading="lazy"
                   />
                   <span
-                    class="ml-2 text-xs lg:text-sm font-semibold text-[#FF5223]"
+                    class="ml-2 text-xs lg:text-sm font-medium text-[#FF5223]"
                     >Logout</span
                   >
                 </a>
@@ -151,11 +151,9 @@
           </nav>
         </aside>
 
-      <section class="w-full relative overflow-y-scroll">
+      <section class="w-full relative h-screen overflow-hidden">
         <div class="w-[90%] mx-auto">
-          <div
-              class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
-            >
+          <div class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4 pb-5 lg:pb-2 ">
               <div class="flex justify-between">
                 <a href="dashboard.html">
                   <figure class="w-full md:px-5 py-6">
@@ -211,69 +209,78 @@
               </div>
             </div>
 
-          <div class="center h-[88vh] md:ml-[210px]">
-            <p class="text-clr_black text-2xl  flex">PairTime > Visible Profile <span class="hidden text-clr_black text-2xl "
-                id="show-profiles-link">  > Show All </span></p>
-            <div class="flex flex-col md:flex-row justify-between items-center mt-12 md:mt-0">
-              <p class="text-clr_black text-4xl font-bold mt-4 mb-6 flex-1 ">
-                You have no services available!
-              </p>
-              <p class="mr-4 text-xl">
-                You have <span class="font-bold">(124)</span> services
-                available in this action
-              </p>
-              <button class="bg-clr_blue text-xl py-3 px-6 text-white rounded-2xl hover:shadow-btn mt-6 md:mt-0"
-                onclick="displayToggle([`all-services-list`,`show-profiles-link`])
-                displayNone(`bubble-yellow`)">
-                <a>
-                  Show All
-                </a>
-              </button>
+          <div class="center">
+            <div class="h-[13vh]">
+              <p class="text-clr_black text-xs lg:text-sm flex gap-1">PairTime <span class="font-extrabold">></span> Visible Profile <span class="hidden text-clr_black" id="show-profiles-link"><b class="font-extrabold">></b> Show All </span></p>
+                  
+              <div class="flex justify-between items-center mt-2 mb-6">
+                <p class="text-clr_black text-base lg:text-xl font-bold flex-1 ">
+                  You have no services available!
+                </p>
+                <p class="mr-4 text-xs">
+                  You have <span class="font-bold">(124)</span> services
+                  available in this action
+                </p>
+                <!-- <button class="bg-clr_blue text-sm py-2 px-4 text-white rounded-2xl hover:shadow-btn mt-6 md:mt-0"
+                  onclick="displayToggle([`all-services-list`,`show-profiles-link`])
+                  displayNone(`bubble-yellow`)">
+                  <a>
+                    Show All
+                  </a>
+                </button> -->
+
+                <button class="bg-clr_blue text-sm py-2 px-4 text-white rounded-2xl hover:shadow-btn mt-6 md:mt-0"
+                id="show-all-btn"
+                >Show All</button>
+              </div>
             </div>
-            <div class="services-listing hidden" id="all-services-list">
-              <div class="single-service bg-white rounded-lg px-9 py-6 mt-8">
-                <div class="flex md:flex-row justify-between flex-col-reverse items-center">
+
+            <!-- profile container -->
+            <div class="services-listing hidden h-[75vh] overflow-auto pr-[2%] pb-8 w-[103%]" id="all-services-list">
+              <div class="single-service bg-white rounded-lg px-6 py-4">
+                <div class="flex justify-between gap-8">
                   <div class="flex">
                     <div>
-                      <img src="./utils/images/service-provider.png" alt="service-provider" />
+                      <img src="./utils/images/service-provider.png" alt="service-provider" class="h-20 w-24" />
                     </div>
-                    <div class="pl-12 w-[100%]">
-                      <p class="text-lg "><span
-                          class="text-clr_blue_light font-extrabold opacity-40 pr-1 ">Username: </span><span
-                          class="text-clr_blue font-extrabold underline">Zhenhao Li</span></p>
+                    <div class="pl-5 w-[100%]">
+                      <p><span
+                          class="text-clr_blue_light text-xs font-semibold opacity-40 pr-1 ">Username: </span><a href=""
+                          class="text-clr_blue font-semibold underline text-sm">Zhenhao Li</a></p>
                       <div class="flex">
                         <p><span
-                            class="text-clr_blue_light font-extrabold opacity-40 pr-1 text-lg ">Bio:</span>
+                            class="text-clr_blue_light font-extrabold opacity-40 pr-1 text-xs">Bio:</span>
                         </p>
-                        <p class="text-lg text-clr_black capitalize "><span
-                            class="text-clr_blue underline opacity-90 text-lg "> Zhenhao</span> is the
+                        <p class="text-sm text-clr_black capitalize"><a href=""
+                            class="text-clr_blue underline opacity-90"> Zhenhao</a> is the
                           founder of PairTime. He contributed to a few open source projects, but is a maintainer of
                           none.Zhenhao is the founder of PairTime. He contributed to a few open source projects, but is
                           a maintainer of none.</p>
                       </div>
                     </div>
                   </div>
-                  <div class="md:w-[35%] w-[100%] text-right">
-                    <button class="bg-clr_blue text-xl py-3 px-6 text-white rounded-2xl hover:shadow-btn">
+                  <div class="min-w-max">
+                    <button class="bg-clr_blue text-sm py-3 px-4 text-white rounded-lg hover:shadow-btn">
                       Request a Pairing session
                     </button>
                   </div>
                 </div>
-                <p class="text-lg text-clr_black capitalize pt-2 ">In 2015,<span
-                    class="text-clr_blue underline opacity-90 text-lg">Zhenhao </span>dropped out of his PhD program in
+                <p class="text-sm text-clr_black capitalize pt-2">In 2015, <a href=""
+                    class="text-clr_blue underline opacity-90">Zhenhao </a>dropped out of his PhD program in
                   mathematical logic to explore the tech world.</br>
                   He worked as a junior consultant at Accenture for 1.5 years, helping clients with their data
                   challenges using Spark, Flink, and Kafka. Then, he worked as a data scientist and data engineer at
                   Connecterra, an AI startup in Amsterdam, for more than 2 years, putting ML models into production and
                   building ETL pipelines and feature engineering pipelines.
                 </p>
-                <p class="text-lg text-clr_black capitalize pt-10 ">
-                  In 2019, Zhenhao became an independent consultant to bootstrap his startup project PairTime, the
+                <p class="text-sm text-clr_black capitalize pt-4">
+                  In 2019, <a href=""
+                  class="text-clr_blue underline opacity-90"> Zhenhao</a> became an independent consultant to bootstrap his startup project PairTime, the
                   product you are using now.
                 </p>
-                <ul class="text-lg text-clr_black capitalize pt-4 pl-10 ">
-                  <p>Areas that<span
-                      class="text-clr_blue underline opacity-90 text-lg "> Zhenhao</span> can help you with:
+                <ul class="text-sm text-clr_black capitalize pt-4 pl-10">
+                  <p>Areas that<a href=""
+                      class="text-clr_blue underline opacity-90"> Zhenhao</a> can help you with:
                   </p>
                   <li>
                     1. big data tech such as Spark, Flink, and Kafka</li>
@@ -285,49 +292,51 @@
                   <li> 7. functional programming and the actor model</li>
                 </ul>
               </div>
-              <div class="single-service bg-white rounded-lg px-9 py-6 mt-12">
-                <div class="flex md:flex-row justify-between flex-col-reverse items-center">
+
+              <div class="single-service bg-white rounded-lg px-6 py-4 mt-5">
+                <div class="flex justify-between gap-8">
                   <div class="flex">
                     <div>
-                      <img src="./utils/images/service-provider-second.png" alt="service-provider" />
+                      <img src="./utils/images/service-provider-second.png" alt="service-provider" class="h-20 w-24" />
                     </div>
-                    <div class="pl-12 w-[100%]">
-                      <p class="text-lg "><span
-                          class="text-clr_blue_light font-extrabold opacity-50 pr-1">Username: </span><span
-                          class="text-clr_blue font-extrabold underline">Robert Hensing</span></p>
+                    <div class="pl-5 w-[100%]">
+                      <p><span
+                          class="text-clr_blue_light text-xs font-semibold opacity-40 pr-1 ">Username: </span><a href=""
+                          class="text-clr_blue font-semibold underline text-sm">Robert Hensing</a></p>
                       <div class="flex">
                         <p><span
-                            class="text-clr_blue_light font-extrabold opacity-50 pr-1 text-lg ">Bio:</span>
+                            class="text-clr_blue_light font-extrabold opacity-40 pr-1 text-xs">Bio:</span>
                         </p>
-                        <p class="text-lg text-clr_black capitalize "><span
-                            class="text-clr_blue underline opacity-90 text-lg "> Robert Hensing</span> is
-                          the founder of PairTime. He contributed to a few open source projects, but is a maintainer of
-                          none.Zhenhao is the founder of PairTime. He contributed to a few open source projects, but is
+                        <p class="text-sm text-clr_black capitalize"><a href=""
+                            class="text-clr_blue underline opacity-90"> Robert</a> is the
+                          founder of PairTime. He contributed to a few open source projects, but is a maintainer of
+                          none. Robert is the founder of PairTime. He contributed to a few open source projects, but is
                           a maintainer of none.</p>
                       </div>
                     </div>
                   </div>
-                  <div class="md:w-[35%] w-[100%] text-right">
-                    <button class="bg-clr_blue text-xl py-3 px-6 text-white rounded-2xl hover:shadow-btn">
+                  <div class="min-w-max">
+                    <button class="bg-clr_blue text-sm py-3 px-4 text-white rounded-lg hover:shadow-btn">
                       Request a Pairing session
                     </button>
                   </div>
                 </div>
-                <p class="text-lg text-clr_black capitalize pt-2 ">In 2015,<span
-                    class="text-clr_blue underline opacity-90 text-lg">Robert Hensing </span>dropped out of his PhD
-                  program in mathematical logic to explore the tech world.</br>
+                <p class="text-sm text-clr_black capitalize pt-2">In 2015, <a href=""
+                    class="text-clr_blue underline opacity-90">Robert </a>dropped out of his PhD program in
+                  mathematical logic to explore the tech world.</br>
                   He worked as a junior consultant at Accenture for 1.5 years, helping clients with their data
                   challenges using Spark, Flink, and Kafka. Then, he worked as a data scientist and data engineer at
                   Connecterra, an AI startup in Amsterdam, for more than 2 years, putting ML models into production and
                   building ETL pipelines and feature engineering pipelines.
                 </p>
-                <p class="text-lg text-clr_black capitalize pt-10 ">
-                  In 2019, Robert Hensing became an independent consultant to bootstrap his startup project PairTime,
-                  the product you are using now.
+                <p class="text-sm text-clr_black capitalize pt-4">
+                  In 2019, <a href=""
+                  class="text-clr_blue underline opacity-90">Robert</a> became an independent consultant to bootstrap his startup project PairTime, the
+                  product you are using now.
                 </p>
-                <ul class="text-lg text-clr_black capitalize pt-4 pl-10 ">
-                  <p>Areas that<span
-                      class="text-clr_blue underline opacity-90 text-lg "> Zhenhao</span> can help you with:
+                <ul class="text-sm text-clr_black capitalize pt-4 pl-10">
+                  <p>Areas that<a href=""
+                      class="text-clr_blue underline opacity-90"> Robert</a> can help you with:
                   </p>
                   <li>
                     1. big data tech such as Spark, Flink, and Kafka</li>
@@ -343,12 +352,14 @@
           </div>
         </div>
 
-        <!-- <div class="circle absolute -left-12 -bottom-16"> -->
-        <div class="circle absolute md:-left-[-21rem] -bottom-0 animtaion-infinite">
-          <div class="circle-1 absolute left-8 bottom-[9.5rem] bg-[#33D9EF] w-8 h-8 rounded-full"></div>
-          <div class="circle-1 bg-[#F48C06] w-44 h-44 relative z-10 rounded-full" id="bubble-yellow"></div>
-        </div>
-        <!-- </div> -->
+       <div class="circle absolute -left-8 -bottom-10 animtaion-infinite">
+            <div
+              class="circle-1 absolute left-5 bottom-[6.2rem] bg-[#33D9EF] w-5 h-5 rounded-full"
+            ></div>
+            <div
+              class="circle-1 bg-[#F48C06] w-28 h-28 relative z-10 rounded-full" id="big-circle"
+            ></div>
+          </div>
       </section>
     </div>
   </main>
@@ -369,17 +380,24 @@
         },
       },
     };
-    function displayToggle(value) {
-      console.log("Value", value)
-      for (let id of value) {
-        var element = document.getElementById(id);
-        element.classList.toggle("display-block");
-      }
-    }
-    function displayNone(value) {
-      var DisplayNone = document.getElementById(value);
-      DisplayNone.classList.toggle("display-none");
-    }
+
+    // const circleEl = document.getElementById('big-circle');
+    // console.log(circleEl);
+
+    // function displayToggle(value) {
+    //   console.log("Value", value)
+    //   for (let id of value) {
+    //     var element = document.getElementById(id);       
+    //     element.classList.toggle("display-block");
+    //     circleEl.style.display = 'none';
+    //   }
+    // }
+    // function displayNone(value) {
+    //   console.log('display none callled')
+    //   var DisplayNone = document.getElementById(value);
+    //   DisplayNone.classList.toggle("display-none");
+    //   circleEl.style.display = 'block';
+    // }
   </script>
   <script src="./utils/js/dashboard.js"></script>
 </body>
