fixed testimonial carousel on homepage

--- a/index.html
+++ b/index.html
@@ -726,10 +726,10 @@
 
           <div
             data-aos="fade-left"
-            class="relative overflow-hidden sm:w-[33rem] w-[19rem] border-2"
+            class="relative overflow-hidden sm:w-[35rem] w-[19rem] mx-auto"
           >
             <button
-              class="absolute h-[6rem] w-[6rem] top-[22%] left-[50%] z-50 border-none outline-none"
+              class="absolute h-[6rem] w-[6rem] top-[22%] left-[50%] z-50 border-none outline-none md:translate-x-10"
               id="carousel-btn"
             >
               <img src="./utils/images/icon-3.svg" alt="icon" loading="lazy" />
@@ -739,7 +739,7 @@
               class="w-full flex gap-[3rem] sm:gap-[8rem] carousel-container"
               id="carousel-container"
             >
-              <div class="client-card">
+              <div class="client-card md:translate-x-10">
                 <figure class="sm:w-[20rem] w-[12rem]">
                   <img
                     src="./utils/images/happy-girl.svg"
@@ -767,7 +767,7 @@
                 </div>
               </div>
 
-              <div class="client-card">
+              <div class="client-card md:translate-x-10">
                 <figure class="sm:w-[20rem] w-[12rem]">
                   <img
                     src="./utils/images/happy-girl.svg"
@@ -795,7 +795,7 @@
                 </div>
               </div>
 
-              <div class="client-card">
+              <div class="client-card md:translate-x-10">
                 <figure class="sm:w-[20rem] w-[12rem]">
                   <img
                     src="./utils/images/happy-girl.svg"
