created multiple pages of dashboard

--- a/create-post.html
+++ b/create-post.html
@@ -636,6 +636,9 @@
               clr_blue_light: "#191453",
               clr_gray_light: "#5A5881",
             },
+            placeholderColor: {
+              primary: "#5A5881",
+            },
           },
         },
       };
